# rust_tailscale

./: Cargo.toml
examples/: dial_peer.rs  echo_server.rs
src/: config.rs  error.rs  identity.rs  keys.rs  lib.rs  listener.rs  server.rs  state.rs  stream.rs
src/control/: auth.rs  http.rs  mod.rs  netmap.rs  noise.rs  resolver.rs  stream.rs
src/derp/: client.rs  frame.rs  mod.rs
src/net/: mod.rs  socket.rs  stack.rs
src/wg/: mod.rs  peer.rs  tunnel.rs
tests/: config_test.rs  integration.rs  noise_handshake_test.rs
